--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,15 +127,15 @@ const metadata = {
     title="Education"
     items={[
       {
-        title: `Bachelor of Engineering, Information and Communication Technology<br /><span class="font-normal">Metropolia University of Applied Sciences</span><br/><span class="text-sm font-normal">2025 - Present </span>`,
+        title: `Bachelor of Engineering, Information and Communication Technology<br /><span class="font-normal">Metropolia University of Applied Sciences</span><br/><span class="text-sm font-normal">Jan 2025 - Present </span>`,
         icon: 'tabler:school',
       },
       {
-        title: `High School <br /> <span class="font-normal">Töölön Yhteiskoulun aikuislukio</span> <br /> <span class="text-sm font-normal">2022 - Present </span>`,
+        title: `High School <br /> <span class="font-normal">Töölön Yhteiskoulun aikuislukio</span> <br /> <span class="text-sm font-normal">Aug 2022 - Present </span>`,
         icon: 'tabler:school',
       },
       {
-        title: `Vocational qualification in ICT specialized in Cyber Security <br /> <span class="font-normal">Business College Helsinki</span> <br /> <span class="text-sm font-normal">2022 - 2024 </span>`,
+        title: `Vocational qualification in ICT specialized in Cyber Security <br /> <span class="font-normal">Business College Helsinki</span> <br /> <span class="text-sm font-normal">Aug 2022 - Dec 2024 </span>`,
         icon: 'tabler:school',
       },
     ]}
