Record search simulation and updates to Random Stuff section

--- a/src/pages/certificates/index.astro
+++ b/src/pages/certificates/index.astro
@@ -17,6 +17,7 @@ const metadata = {
           id="search-input"
           class="rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 l p-4 sm:p-1 lg:p-2 w-full"
           type="text"
+          placeholder="Type certificate name..."
         />
         <p id="result-counter">0 certificates</p>
       </div>
