--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -164,6 +164,10 @@ const metadata = {
         title: `Slush 2024 Volunteer | Sustainability Team<br /><span class="font-normal">Slush Oy</span><br/><span class="text-sm font-normal">Nov 2024</span><br><a class="text-sm font-normal underline" href="https://slush.org/about/">What is Slush?</a>`,
         icon: 'tabler:leaf',
       },
+      {
+        title: `LähiTapiola Hack Day 2024 | Hacker<br /><span class="font-normal">LähiTapiola Palvelut Oy</span><br/><span class="text-sm font-normal">Oct 2024</span><br><a class="text-sm font-normal underline" href="https://www.lahitapiola.fi/tietoa-lahitapiolasta/uutishuone/ajankohtaista/vakuutuspalveluita-testattiin-lahitapiolan-hack-dayssa-kyberturva-toteutuu/">What is LähiTapiola Hack Day?</a>`,
+        icon: 'tabler:terminal',
+      }
     ]}
     classes={{ container: 'max-w-3xl' }}
   />
