--- a/src/pages/records/index.astro
+++ b/src/pages/records/index.astro
@@ -22,10 +22,22 @@ const metadata = {
           type="text"
           placeholder="Type record name..."
         />
+        <div class="mt-2">
+          <button
+            id="all-button"
+            class="rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 px-2 py-1 text-xs hover:bg-gray-100 dark:hover:bg-slate-800 transition-colors"
+            >All Records</button
+          >
+          <button
+            id="random-button"
+            class="rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 px-2 py-1 text-xs hover:bg-gray-100 dark:hover:bg-slate-800 transition-colors"
+            >Random Record</button
+          >
+        </div>
         <p id="result-counter">0 records</p>
       </div>
 
-      <div id="results-container" class="w-screen grid grid-cols-1 sm:grid-cols-3 md:grid-cols-7 p-6 text-xs">
+      <div id="results-container" class="w-full grid grid-cols-1 sm:grid-cols-3 md:grid-cols-6 p-6 text-xs">
         <div
           class="rounded-lg bg-blue-50 transition-colors md:p-6 p-3 m-2 flex flex-col items-center text-center dark:bg-slate-900 dark:hover:bg-slate-800"
         >
@@ -44,17 +56,21 @@ const metadata = {
     const response = await request.json();
 
     response.sort((a, b) => {
-      const titleA = a.result.year;
-      const titleB = b.result.year;
+      const yearA = parseInt(a.result.year || 3000)
+      const yearB = parseInt(b.result.year || 3000);
 
-      if (titleA < titleB) {
+      if (yearA < yearB) {
         return -1;
       }
-      if (titleA > titleB) {
+      if (yearA > yearB) {
         return 1;
       }
       return 0;
     });
+
+    for(const record of response) {
+      console.log(record.result)
+    }
 
     function searchObject(obj: any, query: any) {
       let matches = false;
@@ -111,7 +127,7 @@ const metadata = {
           class="rounded-lg bg-blue-50 transition-colors md:p-6 p-3 m-2 flex flex-col items-center text-center dark:bg-slate-900 dark:hover:bg-slate-800 hover:bg-blue-100"
         >
           <a href="${'https://www.discogs.com' + result.result.uri || ''}" >
-            <img src="${result.result.cover_image}" alt="" />
+            <img class="mb-4" src="${result.result.cover_image}" alt="" />
             <p class="font-bold">${result.result.title || ''}</p>
             <p>${result.result.genre || ''}</p>
             <p>${result.result.year || ''}</p>
@@ -139,6 +155,34 @@ const metadata = {
     } else {
       console.error('The search input element was not found.');
     }
+
+    const randomButton = document.getElementById('random-button');
+
+    randomButton.addEventListener('click', () => {
+      if (searchInput) {
+        searchInput.value = '';
+        searchInput.dispatchEvent(new Event('input'));
+      }
+      const resultsContainer = document.getElementById('results-container');
+      const resultsCounter = document.getElementById('result-counter');
+
+      const randomRecord = response[Math.floor(Math.random() * response.length)];
+      resultsContainer.innerHTML = '';
+      resultsCounter.innerHTML = `1 record`;
+
+      searchInput.focus();
+      searchInput.value = randomRecord.result.title;
+
+      addResult(randomRecord, resultsContainer);
+    });
+
+    const allButton = document.getElementById('all-button');
+
+    allButton.addEventListener('click', () => {
+      searchInput.focus();
+      searchInput.value = '';
+      search('');
+    });
 
     /**
      * Simulates typing queries into the search input in a loop until the user focuses on the input.
@@ -206,7 +250,7 @@ const metadata = {
     }
 
     // Example usage
-    simulateSearch(['Bob Marley', 'Abba', 'Michael Jackson', 'Elegia', 'Louis Armstrong'], 50, 1200);
+    simulateSearch(['Bob Marley', 'Tchaikovsky', 'Michael Jackson', 'Elegia', 'Louis Armstrong'], 50, 1200);
 
     search('');
   </script>
