--- a/src/pages/prf/index.astro
+++ b/src/pages/prf/index.astro
@@ -30,7 +30,7 @@ const metadata = {
       const container = document.getElementById('iframe-container');
 
       const iframe = document.createElement('iframe');
-      iframe.src = 'web-authn/browser/index.html';
+      iframe.src = '/web-authn/browser/index.html';
       iframe.allow = 'publickey-credentials-get *';
       iframe.style.border = 'none';
       iframe.style.width = '100%';
