Update AstroJS to 5.8.0, updated Education, Experiments, Technical Skills, Random Stuff and About me sections. Added contact form.

--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -5,6 +5,7 @@ import { twMerge } from "tailwind-merge";
 import type { Contact } from '~/types';
 import { Icon } from 'astro-icon/components';
 import Content from '~/components/widgets/Content.astro';
+import ContactForm from './ContactForm.astro';
 
 const {
   title = await Astro.slots.render('title'),
@@ -83,6 +84,8 @@ const {
       </>
     )
   }
+
+<ContactForm/>
 <style>
   .blur {
     filter: blur(7px); /* Adjust the blur amount as needed */
