--- a/src/pages/records/index.astro
+++ b/src/pages/records/index.astro
@@ -250,7 +250,7 @@ const metadata = {
     }
 
     // Example usage
-    simulateSearch(['Bob Marley', 'Tchaikovsky', 'Michael Jackson', 'Elegia', 'Louis Armstrong'], 50, 1200);
+    //simulateSearch(['Bob Marley', 'Tchaikovsky', 'Michael Jackson', 'Elegia', 'Louis Armstrong'], 50, 1200);
 
     search('');
   </script>
