--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,6 @@ const metadata = {
       {
         icon: 'tabler:brand-linkedin',
         callToAction: {
-          target: '_blank',
           text: 'LinkedIn',
           href: 'r/linkedin.html',
         },
@@ -52,27 +51,32 @@ const metadata = {
       {
         icon: 'tabler:brand-github',
         callToAction: {
-          target: '_blank',
           text: 'GitHub',
           href: 'r/github.html',
+        },
+      },
+      {
+        icon: 'tabler:message',
+        callToAction: {
+          text: 'Form',
+          href: 'contact#form',
         },
       },
     ]}
     image={{
       src: '~/assets/images/Portrait.jpg',
-      alt: 'Me posing at Hong Kong High West Viewing Point',
+      alt: 'Me posing somewhere in Hong Kong',
     }}
   >
     <Fragment slot="content">
       <h2 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">About me</h2>
       <p>
-        Experienced in server network construction, network security and little in IT management. Developed skills in IT
-        infrastructure, cyber security and software development over the past 5 years. Native Finnish speaker and
-        proficient in English, with a strong interest for technology and a commitment to growth and survival in the ICT
-        field.
+        Hey there! I'm 19 and I've spent the last six years getting hands-on with
+        servers, networks and cyber security. I'm really into figuring out how things work (and how to keep them safe). I've
+        also dabbled in IT management and software development along the way.
       </p>
       <br />
-      <p>Contact me via your preferred method:</p>
+      <p>Feel free to reach out however suits you best!</p>
     </Fragment>
 
     <Fragment slot="bg">
@@ -127,16 +131,17 @@ const metadata = {
     title="Education"
     items={[
       {
-        title: `Bachelor of Engineering, Information and Communication Technology<br /><span class="font-normal">Metropolia University of Applied Sciences</span><br/><span class="text-sm font-normal">Jan 2025 - Present </span>`,
+        title: `Bachelor of Engineering, Information and Communication Technology<br /><span class="font-normal">Metropolia University of Applied Sciences</span><br/><span class="text-sm font-normal">Jan 2024 - Present </span>`,
         icon: 'tabler:school',
       },
       {
-        title: `High School <br /> <span class="font-normal">Töölön Yhteiskoulun aikuislukio</span> <br /> <span class="text-sm font-normal">Aug 2022 - Present </span>`,
+        title: `High School <br /> <span class="font-normal">Töölön yhteiskoulun aikuislukio</span> <br /> <span class="text-sm font-normal">Aug 2022 - May 2025 </span>`,
         icon: 'tabler:school',
+        description: 'Matriculation Examination/Ylioppilastutkinto'
       },
       {
         title: `Vocational qualification in ICT specialized in Cyber Security <br /> <span class="font-normal">Business College Helsinki</span> <br /> <span class="text-sm font-normal">Aug 2022 - Dec 2024 </span>`,
-        icon: 'tabler:school',
+        icon: 'tabler:school'
       },
     ]}
     classes={{ container: 'max-w-3xl' }}
@@ -153,7 +158,7 @@ const metadata = {
     title="Random Stuff"
     items={[
       {
-        title: `Taitaja Competition Participant | <a href="https://taitaja2025.fi/en/skills-categories/information-and-communication-technology/204-ict-specialist/">ICT Specialist</a><br /><span class="font-normal">Skills Finland ry</span><br/><span class="text-sm font-normal">Jan 2025</span><br><a class="text-sm font-normal underline" href="https://taitaja2025.fi/en/what-is-taitaja/">What is Taitaja?</a>`,
+        title: `Taitaja 2025 Finalist | <a href="https://taitaja2025.fi/en/skills-categories/information-and-communication-technology/204-ict-specialist/">ICT Specialist</a><br /><span class="font-normal">Skills Finland ry</span><br/><span class="text-sm font-normal">May 2025</span><br><a class="text-sm font-normal underline" href="https://taitaja2025.fi/en/what-is-taitaja/">What is Taitaja?</a>`,
         icon: 'tabler:terminal-2',
       },
       {
@@ -161,13 +166,13 @@ const metadata = {
         icon: 'tabler:elevator',
       },
       {
-        title: `Slush 2024 Volunteer | Sustainability Team<br /><span class="font-normal">Slush Oy</span><br/><span class="text-sm font-normal">Nov 2024</span><br><a class="text-sm font-normal underline" href="https://slush.org/about/">What is Slush?</a>`,
+        title: `Slush 2024 Volunteer | Recycling Team<br /><span class="font-normal">Slush Oy</span><br/><span class="text-sm font-normal">Nov 2024</span><br><a class="text-sm font-normal underline" href="https://slush.org/about/">What is Slush?</a>`,
         icon: 'tabler:leaf',
       },
       {
         title: `LähiTapiola Hack Day 2024 | Hacker<br /><span class="font-normal">LähiTapiola Palvelut Oy</span><br/><span class="text-sm font-normal">Oct 2024</span><br><a class="text-sm font-normal underline" href="https://www.lahitapiola.fi/tietoa-lahitapiolasta/uutishuone/ajankohtaista/vakuutuspalveluita-testattiin-lahitapiolan-hack-dayssa-kyberturva-toteutuu/">What is LähiTapiola Hack Day?</a>`,
         icon: 'tabler:terminal',
-      }
+      },
     ]}
     classes={{ container: 'max-w-3xl' }}
   />
@@ -181,43 +186,18 @@ const metadata = {
     defaultIcon="tabler:point-filled"
     items={[
       {
-        title: 'Network Administration',
-        description: 'Configuring and maintaining secure and efficient network infrastructures.',
+        title: 'System Administration',
+        description: 'I enjoy managing both on-premises and cloud-based infrastructure.',
       },
       {
         title: 'Cyber Security',
-        description: 'Implementing robust security measures to protect against cyber threats.',
-      },
-      {
-        title: 'Server Environments',
-        description: 'Managing server environments, using software like ESXi, Proxmox, Puppet and Jenkins.',
-      },
-      {
-        title: 'Linux Systems',
         description:
-          'In-depth knowledge of Linux systems, including system hardening and proficient troubleshooting skills.',
+          'Practical experience in securing environments, vulnerability management and ethical hacking principles.',
       },
       {
-        title: 'Virtualization Technologies',
+        title: 'Software Development',
         description:
-          'Skilled in using virtualization platforms like VMware ESXi, Hyper-V, Proxmox and XCP-ng for efficient resource utilization.',
-      },
-      {
-        title: 'IT Infrastructure',
-        description: 'Designing and maintaining reliable and scalable IT infrastructures.',
-      },
-      {
-        title: 'Scripting and Automation',
-        description: 'Adept at scripting languages to automate repetitive tasks and enhance workflow efficiency.',
-      },
-      {
-        title: 'Team Collaboration',
-        description: 'Proven ability to collaborate seamlessly with cross-functional teams for project success.',
-      },
-      {
-        title: 'Troubleshooting',
-        description:
-          'Effective problem-solving skills with a keen attention to detail for identifying and resolving issues.',
+          'Experience writing clean, maintainable code in Python and JavaScript. Experienced with API development, CLI tools and full-stack projects.',
       },
     ]}
   >
@@ -252,7 +232,7 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">
-        Server Lab <br /><span class="text-2xl">Where Ideas Take Flight</span>
+        Home Lab <br /><span class="text-2xl">Where Ideas Take Flight</span>
       </h3>
     </Fragment>
   </Content>
@@ -297,24 +277,24 @@ const metadata = {
     isAfterContent={true}
     items={[
       {
-        icon: 'tabler:code',
+        icon: 'tabler:plane',
         description:
-          'In programming, comfort is key. I navigate through languages like Python, JavaScript, C++, C# and beyond with ease, using them as tools to bring ideas to life. From exploring frameworks and libraries to tackling real-world problems.',
+          'In the Flight Game, your goal is to reach Thailand without using up all your carbon credits. Answer sustainability questions correctly to earn more credits and keep flying.',
       },
       {
-        icon: 'tabler:cpu',
+        icon: 'tabler:question-mark',
         description:
-          "My projects range from software to IoT hardware. I've developed tools such as a search engine for my vinyl record collection and a concept for a peer-to-peer digital banking system. On the hardware side, I've transformed an old Japanese flip-clock to run on USB power using Arduino, which also controls my room's audio system (and will eventually function as an alarm clock).",
+          'This was a group project at Metropolia UAS. Read more about the project in Finnish on <a class="underline" href="https://github.com/LeoLeerila/Projekti">GitHub</a>',
       },
     ]}
     image={{
-      src: 'https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYTZxd205djJuOHpndHU1eWs0MzNqdjUwNG1xZnloNzR0dGFzZjFjNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wwg1suUiTbCY8H8vIA/giphy.webp',
-      alt: 'A very delicious image of spaghetti.',
+      src: 'src/assets/images/flight-game.gif',
+      alt: 'Gameplay and login gif',
     }}
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">
-        Software Development<br />
+        Flight Game<br />
       </h3>
     </Fragment>
   </Content>
@@ -322,12 +302,12 @@ const metadata = {
   <!-- CallToAction Widget *********** -->
 
   <CallToAction
-    title="Let's work together"
-    subtitle="Seeking opportunities in IT infrastructure from all over the world!"
+    title="Let's stay in touch!"
+    subtitle="Have a question, idea or just want to say hi?"
     actions={[
       {
         variant: 'primary',
-        text: 'Contact',
+        text: 'Say Hello',
         href: '/contact',
       },
     ]}
