Contact form fix

--- a/src/components/widgets/ContactForm.astro
+++ b/src/components/widgets/ContactForm.astro
@@ -2,7 +2,7 @@
 import Button from '~/components/ui/Button.astro';
 ---
 
-<section id="form">
+<section id="section-form">
   <div
   class="max-w-3xl mx-auto my-8 rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-4 sm:p-6 lg:p-8"
 >
