--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const metadata = {
         icon: 'tabler:message',
         callToAction: {
           text: 'Form',
-          href: 'contact#form',
+          href: 'contact#section-form',
         },
       },
     ]}
