Redirect system fix

--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -41,7 +41,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'Teams',
-          href: '../r/teams.html',
+          href: '../r/teams',
         },
       },
       {
@@ -49,7 +49,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'LinkedIn',
-          href: '../r/linkedin.html',
+          href: '../r/linkedin',
         },
       },
       {
@@ -57,7 +57,7 @@ const {
         callToAction: {
           target: '_blank',
           text: 'GitHub',
-          href: '../r/github.html',
+          href: '../r/github',
         },
       },
     ]}
