--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,21 +38,21 @@ const metadata = {
         icon: 'tabler:brand-teams',
         callToAction: {
           text: 'Teams',
-          href: 'r/teams.html',
+          href: 'r/teams',
         },
       },
       {
         icon: 'tabler:brand-linkedin',
         callToAction: {
           text: 'LinkedIn',
-          href: 'r/linkedin.html',
+          href: 'r/linkedin',
         },
       },
       {
         icon: 'tabler:brand-github',
         callToAction: {
           text: 'GitHub',
-          href: 'r/github.html',
+          href: 'r/github',
         },
       },
       {
