--- a/src/pages/prf/index.astro
+++ b/src/pages/prf/index.astro
@@ -4,13 +4,13 @@ import Headline from '~/components/ui/Headline.astro';
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 
 const redirect = {
-  name: 'Redirect to WebAuthn Tool Karkkainen.net',
+  name: 'Test WebAuthn PRF Extension Support',
   link: 'https://webauthn.karkkainen.net/'
 }
 
 const metadata = {
   title: redirect.name,
-  robots: { index: false, follow: false },
+  robots: { index: true, follow: true },
 };
 ---
 
