--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -173,6 +173,10 @@ const metadata = {
         title: `LähiTapiola Hack Day 2024 | Hacker<br /><span class="font-normal">LähiTapiola Palvelut Oy</span><br/><span class="text-sm font-normal">Oct 2024</span><br><a class="text-sm font-normal underline" href="https://www.lahitapiola.fi/tietoa-lahitapiolasta/uutishuone/ajankohtaista/vakuutuspalveluita-testattiin-lahitapiolan-hack-dayssa-kyberturva-toteutuu/">What is LähiTapiola Hack Day?</a>`,
         icon: 'tabler:terminal',
       },
+      {
+        title: `Generative AI in the financial sector | Hackathon Competitor<br /><span class="font-normal">Finance Finland Association</span><br/><span class="text-sm font-normal">Oct 2024</span><br><a class="text-sm font-normal underline" href="https://www.finanssiala.fi/en/about-us/">What is Finance Finland?</a>`,
+        icon: 'tabler:robot',
+      },
     ]}
     classes={{ container: 'max-w-3xl' }}
   />
