--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -167,6 +167,11 @@ const metadata = {
         icon: 'tabler:coins',
         description: 'Received a grant from the Finnish Business College Foundation to support participation in an internship in Hong Kong.',
 
+      },
+      {
+        title: `Kimmo Riihimäki Foundation Scholarship <br /><span class="font-normal">Kimmo Riihimäki säätiö</span><br/><span class="text-sm font-normal">May 2022</span><br>`,
+        icon: 'tabler:wood',
+        description: 'Awarded a scholarship as encouragement for continued development in woodworking craftsmanship.',
       }
     ]}
     classes={{ container: 'max-w-3xl' }}
