--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,10 @@
 ---
-
+import Image from 'astro/components/Image.astro';
+import favIconSvg from '~/assets/favicons/favicon.svg';
 ---
-
+<Image src={favIconSvg} width={50} height={50} alt="RK symbol" />
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
 >
-  KARKKAINEN<span class="text-secondary dark:text-white highlight">.NET</span>
+   KARKKAINEN<span class="text-secondary dark:text-white highlight">.NET</span>
 </span>
