--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -6,5 +6,5 @@ import favIconSvg from '~/assets/favicons/favicon.svg';
 <span
   class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
 >
-   KARKKAINEN<span class="text-secondary dark:text-white highlight">.NET</span>
+   <span class="text-secondary dark:text-white highlight">RENE</span> KÄRKKÄINEN
 </span>
